--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Student</title>
@@ -7,5 +7,15 @@
 <body>
 
 <h1> Hello There</h1>
+
+<table>
+    <th>courseName:</th>
+    <tr th:each ="i:${student}">
+        <td th:text="${i.firstName}"/>
+        <td th:text="${i.lastName}"/>
+
+    </tr>
+
+</table>
 </body>
 </html>
