--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
@@ -6,13 +6,20 @@
 </head>
 <body>
 
-<h1> Hello There</h1>
-
+<h2> Juny First Course Registration</h2>
+<hr>
 <table>
-    <th>courseName:</th>
+    <th>First Name: </th>
+    <th>Last Name: </th>
+    <th>ID:</th>
     <tr th:each ="i:${student}">
         <td th:text="${i.firstName}"/>
         <td th:text="${i.lastName}"/>
+        <td th:text="${i.id}"/>
+
+        <td >
+            <a th:href="@{getCourse/{id} (id=${i.id})  }">Register Courses</a>
+        </td>
 
     </tr>
 
