register & search course page added

--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
@@ -18,7 +18,7 @@
         <td th:text="${i.id}"/>
 
         <td >
-            <a th:href="@{getCourse/{id} (id=${i.id})  }">Register Courses</a>
+            <a th:href="@{/student/{id} (id=${i.id})  }">View Courses</a>
         </td>
 
     </tr>
