--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/searCourse.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/searCourse.html
@@ -16,12 +16,13 @@
 <div th:include="courseH::courseList"/>
 <th>Action:</th>
 
-<tr th:each="a:${courses}">
+<tr th:each="a, iter:${courses}">
     <td th:text="${a.courseName}"/>
     <td th:text="${a.teacher.firstName} +' '+ ${a.teacher.lastName}"/>
     <td>
-        <a th:href="@{/course/setshopping/{sid}/{cid} (sid=${student.id}, cid=${a.id})} ">
-            <input type="button" value="Add Course">
+        <a th:href="@{/course/shopping/{sid}/{cid} (sid=${student.id}, cid=${iter.index})} ">
+            <input type="button" value="Add Course"
+                   onclick="alert(' Course Added to Shopping Cart')">
         </a>
 
     </td>
