shoppingCart remove function

--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
@@ -13,9 +13,9 @@
 </div>
 
 
- <input th:fragment="shoppingcart" type="button" value="Shopping Cart">
+ <input th:fragment="shoppingcart"  type="button" value="Shopping Cart">
 
-
+<input th:fragment="goback"  type="button" value="Go Back">
 
 
 </body>
