--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/regCourse.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/regCourse.html
@@ -7,9 +7,11 @@
 <body>
 
 <h2>Registered Courses:</h2>
+<a th:href="@{/student}" th:insert="courseH::goback"/>
+
 <a th:href="@{/course/searCourse}">  <input type="button" value="Search Courses"> </a>
 
-<a th:insert="courseH::shoppingcart"/>
+<a th:href="@{/course/shopping}"  th:insert="courseH::shoppingcart"/>
 
 
 <Table >
