--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
 <h2> Courses Inside Your Shopping Cart</h2>
 <hr>
+<a th:href="@{/course/searCourse}" th:insert="courseH::goback"/>
 
-<a th:href="@{/course/searCourse}"><input type="button" value="Go Back"/></a>
 <table>
     <th>Key: </th>
     <th>Course Name: </th>
@@ -19,9 +20,15 @@
         <td th:text="${i.key}"/>
         <td th:text="${i.value.courseName}"/>
         <td th:text="${i.value.teacher.firstName}+' '+ ${i.value.teacher.lastName}"/>
-
-
+        <td>
+        <form style="block: inline" action="#" th:action="@{/course/shopping/(key=${i.key})}"   th:method="delete">
+            <input type="submit" value="Delete From Cart"/>
+        </form></td>
     </tr>
+
+
+
+
 
 
 </table>
