register courses feature added, still bugs to be resolved

--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
@@ -7,7 +7,7 @@
 <body>
 
 <!--i dont want to have the <div>, so use include and not insert-->
-<div th:fragment="courseList">
+<div th:fragment="courseTH">
         <th>Course Name: </th>
         <th>Teacher Name: </th>
 </div>
