--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/successful.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/successful.html
@@ -5,9 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h2>home</h2>
-<p th:text="${one}"/>
+Successful!
 
-
+<p th:text="${shoppingCart}"/>
 </body>
 </html>
