--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
@@ -8,11 +8,12 @@
 <body>
 <h2> Courses Inside Your Shopping Cart</h2>
 <hr>
-<a th:href="@{/course/searCourse}" th:insert="courseH::goback"/>
 
+<!--<a th:href="@{/student/{id} (id=${student.id}) }"> <button>Back to Register</button> </a>-->
+<!--<a th:href="@{/course/searCourse}"> <button>Back to Search</button> </a>-->
+<a th:href="@{/course/searCourse}" th:insert="courseH::goback"/>
 <table>
-    <th>Key: </th>
-    <th>Course Name: </th>
+    <div th:replace="courseH::courseTH"></div>
     <th>Teacher Name:</th>
 
 
@@ -26,7 +27,9 @@
         </form></td>
     </tr>
 
-
+    <form action="#" th:action="@{/course/shopping}" th:method="post">
+        <input type="submit" value="Register Courses"/>
+    </form>
 
 
 
