--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
@@ -12,7 +12,7 @@
     <th>First Name: </th>
     <th>Last Name: </th>
     <th>ID:</th>
-    <tr th:each ="i:${student}">
+    <tr th:each ="i:${students}">
         <td th:text="${i.firstName}"/>
         <td th:text="${i.lastName}"/>
         <td th:text="${i.id}"/>
