drop course function added

--- a/CourseRegistrationSystem/MVC/src/main/resources/templates/form.html
+++ b/CourseRegistrationSystem/MVC/src/main/resources/templates/form.html
@@ -5,14 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
-<!--<p th:text="${List}"/>-->
-
-<!--<div th:each="i:${map}">-->
-<!--    <p th:text="${i[1]}"/>-->
-
-<!--</div>-->
-<h2> hello</h2>
-<p th:text="${map[__${one}__]}"/>
+<h2>shoppingCart.java</h2>
+<a th:href="@{/controller2}">controller2-first method</a>
+<a th:href="@{/controller2/stu}">controller2-second method</a>
 </body>
 </html>
