--- a/CourseRegistrationSystem/MVC/src/main/resources/templates/test3.html
+++ b/CourseRegistrationSystem/MVC/src/main/resources/templates/test3.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-Successful!
-<a th:href="@{/student/{id}(id=${student.id})}" th:insert="courseH::goback"/>
-<p th:text="${shoppingCart}"/>
+<h2>test3</h2>
+<p th:text="${three}"/>
+
+
 </body>
 </html>
