--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/searCourse.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/searCourse.html
@@ -16,7 +16,7 @@
 <h2> Here are all the courses availiable</h2>
 <hr>
 
-<!--go back button-->
+<!--regCourse button-->
 <a th:href="@{/student/{id}(id=${student.id})}" th:insert="courseH::goback"/>
 
 <!--shopping cart button-->
