delete all course from cart after registering

--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/successful.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/successful.html
@@ -7,6 +7,6 @@
 <body>
 Successful!
 <a th:href="@{/student/{id}(id=${student.id})}" th:insert="courseH::goback"/>
-<p th:text="${shoppingCart}"/>
+<!--<p th:text="${shoppingCart}"/>-->
 </body>
 </html>
