--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/dropcourse.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/dropcourse.html
@@ -6,12 +6,9 @@
 </head>
 <body>
 <section class="container">
-
 <a th:href="@{/student/{id}(id=${student.id})}" th:insert="courseH::goback"/>
 
-<p >Course Register Successful!</p>
-
-
+ <p>Course is Dropped Sucessfully</p>
 </section>
 </body>
 </html>
