--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Header</title>
+
 </head>
 <body>
 
@@ -16,6 +17,11 @@
  <input th:fragment="shoppingcart"  type="button" value="Shopping Cart">
 
 <input th:fragment="goback"  type="button" value="Go Back">
+
+<link th:fragment="bootstrap" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 
 
 </body>
