--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/regCourse.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/regCourse.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>View Course</title>
+    <link th:replace="courseH::bootstrap"/>
 </head>
 <body>
 
+<section class="container">
 <h2>Registered Courses:</h2>
 <a th:href="@{/student}" th:insert="courseH::goback"/>
 
 <a th:href="@{/course/searCourse}">  <input type="button" value="Search Courses"> </a>
 
 
-<Table >
-<div th:replace="courseH::courseTH"></div>
+<Table class=" table table-hover">
+    <thead class="table-dark">
+    <div th:replace="courseH::courseTH"></div>
+    <th>Action:</th>
+    </thead>
 
-<th>Action:</th>
+    <tr th:each="a:${student.getCourseList()}">
+        <td th:text="${a.courseName}"/>
+        <td th:text="${a.teacher.firstName} +' '+ ${a.teacher.lastName}"/>
+        <td>
+            <form action="#" th:action="@{/student/registration/{id} (id=${a.id}) } " th:method="DELETE" >
+        <input type="submit" value="Drop Courses" onclick="return confirm('Are You Sure you want to Drop this Course?')">
+            </form>
+        </td>
+    </tr>
 
-<tr th:each="a:${student.getCourseList()}">
-    <td th:text="${a.courseName}"/>
-    <td th:text="${a.teacher.firstName} +' '+ ${a.teacher.lastName}"/>
-
-    <td>
-        <form action="#" th:action="@{/student/registration/{id} (id=${a.id}) } " th:method="DELETE" >
-
-<input type="submit" value="Drop Courses" onclick="return confirm('Are You Sure you want to Drop this Course?')">
-        </form>
-    </td>
-
-</tr>
-
-    </Table>
-
+</Table>
+</section>
 
 </body>
 </html>
