--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
@@ -3,43 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <link th:replace="courseH::bootstrap"/>
 </head>
+
+
 <body>
+<section class="container">
 <h2> Courses Inside Your Shopping Cart</h2>
 <hr>
 
 <!--<a th:href="@{/student/{id} (id=${student.id}) }"> <button>Back to Register</button> </a>-->
 <!--<a th:href="@{/course/searCourse}"> <button>Back to Search</button> </a>-->
 <a th:href="@{/course/searCourse}" th:insert="courseH::goback"/>
-<table>
+<Table class=" table table-hover">
+    <thead class="table-dark">
+    <th>CourseId:</th>
     <div th:replace="courseH::courseTH"></div>
-    <th>Teacher Name:</th>
-
-
+    <th>Action:</th>
+    </thead>
     <tr th:each="i:${shoppingCart}">
         <td th:text="${i.key}"/>
         <td th:text="${i.value.courseName}"/>
         <td th:text="${i.value.teacher.firstName}+' '+ ${i.value.teacher.lastName}"/>
         <td>
-        <form style="block: inline" action="#" th:action="@{/course/shopping/(key=${i.key})}"   th:method="delete">
-            <input type="submit" value="Delete From Cart"/>
-        </form></td>
-
+            <form style="block: inline" action="#" th:action="@{/course/shopping/(key=${i.key})}"   th:method="delete">
+                <input type="submit" value="Delete From Cart"/>
+            </form></td>
     </tr>
-    <tr>
-        <td/>
-        <td/>
-        <td>
-            <form style="display:inline" action="#" th:action="@{/student/registration}" th:method="POST">
-                <input type="submit" value="Register Courses"/>
-            </form>
-        </td>
-        <td/>
-    </tr>
-
 </table>
+</section>
 
-
+<tr>
+    <td/>
+    <td/>
+    <td>
+        <form style="display:inline; margin-left:66.5%" action="#" th:action="@{/student/registration}"
+              th:method="POST">
+            <input type="submit" value="Register Courses"/>
+        </form>
+    </td>
+    <td/>
+</tr>
 </body>
 </html>
