--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/shoppingCart.html
@@ -30,19 +30,19 @@
                 <input type="submit" value="Delete From Cart"/>
             </form></td>
     </tr>
+    <tr >
+        <td/> <td/> <td/>
+        <td>
+            <form class="align-bottom"  action="#"
+                  th:action="@{/student/registration}"
+                  th:method="POST">
+                <input type="submit" value="Register Courses"/>
+            </form>
+        </td>
+    </tr>
 </table>
 </section>
 
-<tr>
-    <td/>
-    <td/>
-    <td>
-        <form style="display:inline; margin-left:66.5%" action="#" th:action="@{/student/registration}"
-              th:method="POST">
-            <input type="submit" value="Register Courses"/>
-        </form>
-    </td>
-    <td/>
-</tr>
+
 </body>
 </html>
