--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/successful.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/successful.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+.center{
+    text-align: center;
+}
+
+p.lead{
+    font-size:25px;
+}
+    </style>
+
+    <link th:replace="courseH::bootstrap"/>
 </head>
 <body>
-<section class="container">
+<a style="margin-left:12%" th:href="@{/student/{id}(id=${student.id})}" th:insert="courseH::goback"/>
+<section class="container center">
 
-<a th:href="@{/student/{id}(id=${student.id})}" th:insert="courseH::goback"/>
 
-<p >Course Register Successful!</p>
+<h1 class="display-4">Status</h1>
+    <hr class="my-4">
+<p class="lead" >Course Register Successful!</p>
 
 
 </section>
