--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/courseH.html
@@ -14,15 +14,17 @@
 </div>
 
 
- <input th:fragment="shoppingcart"  type="button" value="Shopping Cart">
+ <input class="btn btn-outline-success" th:fragment="shoppingcart"  type="button" value="Shopping Cart">
 
-<input th:fragment="goback"  type="button" value="Go Back">
+<input class="btn btn-outline-success" th:fragment="goback"  type="button" value="Go Back">
 
-<link th:fragment="bootstrap" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+<div th:fragment="bootstrap">
+<link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</div>
 
 </body>
 </html>
