--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/student.html
@@ -9,23 +9,26 @@
 <body>
 
     <section class="container">
-<h2> Juny First Course Registration</h2>
+<h2 class="display-5 text-center"> Juny First Course Registration</h2>
 <hr>
 
 <table class=" table table-hover">
     <thead class="table-dark">
+    <th>ID:</th>
         <th>First Name: </th>
         <th>Last Name: </th>
-        <th>ID:</th>
         <th>Action:</th>
     </thead>
-    <tr th:each ="i:${students}">
+        <tr th:each ="i:${students}">
+        <td th:text="${i.id}"/>
         <td th:text="${i.firstName}"/>
         <td th:text="${i.lastName}"/>
-        <td th:text="${i.id}"/>
 
+<!--            view courses button-->
         <td >
-            <a th:href="@{/student/{id} (id=${i.id})  }">View Courses</a>
+            <a th:href="@{/student/{id} (id=${i.id})  }">
+                <input class="btn btn-outline-dark" type="button"value="View Courses"/>
+            </a>
         </td>
 
     </tr>
