basic REST security& consumer login, and swapping port for AWS

--- a/CourseRegistrationSystem/RestConsume/src/main/resources/templates/regCourse.html
+++ b/CourseRegistrationSystem/RestConsume/src/main/resources/templates/regCourse.html
@@ -29,8 +29,8 @@
 <!--        drop course button-->
         <td>
             <form action="#" th:action="@{/student/registration/{id} (id=${a.id}) } " th:method="DELETE" >
-        <input class="btn btn-outline-dark" type="submit" value="Drop Courses" onclick="return
-        confirm('Are You Sure you want to Drop this Course?')">
+        <input class="btn btn-outline-dark" type="submit" value="Drop Courses"
+               onclick="return confirm('Are You Sure you want to Drop this Course?')">
             </form>
         </td>
     </tr>
